fix to bugreport, booking, new map and placeholder icons

--- a/android_search/res/layout/fragment_hotel_list_portrait.xml
+++ b/android_search/res/layout/fragment_hotel_list_portrait.xml
@@ -12,6 +12,7 @@
         android:drawSelectorOnTop="true"
         android:clipToPadding="false"
         android:scrollbarStyle="outsideOverlay"
+        android:background="@drawable/chat_background"
         android:choiceMode="singleChoice"
         android:divider="@null"
         android:cacheColorHint="#00000000" >
