--- a/android_search/res/layout/room_list_item_expanded.xml
+++ b/android_search/res/layout/room_list_item_expanded.xml
@@ -49,7 +49,7 @@
 	            
   	            android:layout_gravity="center"
 	            android:background="@android:drawable/picture_frame"
-	            android:src="@drawable/hotel72"
+	            android:src="@drawable/slanted_icon_72"
 	            android:contentDescription="@string/room_photo"/>
     	    </LinearLayout>
     
