--- a/android_search/res/layout/fragment_select_hotel_room.xml
+++ b/android_search/res/layout/fragment_select_hotel_room.xml
@@ -21,7 +21,7 @@
             android:layout_alignParentTop="true"
             android:minHeight="64dp"
             android:padding="4dip"
-            android:src="@drawable/hotel72" />
+            android:src="@drawable/slanted_icon_72" />
 
         <TextView
             android:id="@+id/hotelName"
