--- a/android_search/res/layout/hotel_list_item.xml
+++ b/android_search/res/layout/hotel_list_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/hotelImage"
         android:layout_width="72dip"
         android:layout_height="72dip"
-        android:src="@drawable/hotel72"
+        android:src="@drawable/slanted_icon_72"
         android:layout_gravity="center"
         android:padding="2dp"
         android:contentDescription="@string/hotel_image">
