--- a/android_search/res/layout/room_list_item.xml
+++ b/android_search/res/layout/room_list_item.xml
@@ -21,7 +21,7 @@
             android:layout_alignParentRight="true"
             android:visibility="visible"
             android:background="@android:drawable/picture_frame"
-            android:src="@drawable/hotel72"
+            android:src="@drawable/slanted_icon_72"
             />
         
         <LinearLayout 
