--- a/android_search/res/layout/reservationinfolistlayout.xml
+++ b/android_search/res/layout/reservationinfolistlayout.xml
@@ -24,10 +24,11 @@
     either expressed or implied, of the Expedia Affiliate Network or Expedia Inc.
 -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:orientation="horizontal">
+              android:orientation="horizontal"
+              android:padding="4dp">
 <!--               android:background="@color/background" -->
 
     <TextView
@@ -35,12 +36,14 @@
             android:layout_height="wrap_content"
             android:text="New Text"
             android:id="@+id/reservationinfokey"
+            android:layout_marginRight="4dp"
             android:layout_gravity="center_horizontal|top"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Text"
+            android:layout_marginLeft="4dp"
             android:id="@+id/reservationinfovalue"
             android:layout_gravity="center_horizontal|top"/>
-</LinearLayout>
+</TableRow>
