--- a/android_search/res/values/colors.xml
+++ b/android_search/res/values/colors.xml
@@ -159,4 +159,6 @@
     <color name="text">#ff333333</color>
     <color name="selected_room_list_item">#ffc3c3ff</color>
     <color name="selected_non_refundable_room_list_item">#ffe08050</color>
+    <color name="high_price_color">#ff7777cc</color>
+    <color name="low_price_color">#ff0000ff</color>
 </resources>
