--- a/android_search/res/layout/fragment_bookingsummary.xml
+++ b/android_search/res/layout/fragment_bookingsummary.xml
@@ -357,13 +357,13 @@
                     android:text="@string/billing_info_button"
                     />
             
-            
-            <LinearLayout android:id="@+id/billinginformationlayout"
-                          android:layout_width="fill_parent"
-                          android:layout_height="wrap_content"
-                          android:orientation="vertical"
-                          android:visibility="gone"
-                          >
+            <LinearLayout
+                android:id="@+id/billinginformationlayout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="visible" >
+
                 <TextView android:id="@+id/billingInformationLabel"
                           android:layout_width="fill_parent"
                           android:layout_height="wrap_content"
@@ -405,21 +405,22 @@
                               android:hint="@string/billing_zip"
                               android:inputType="number" />
                 </LinearLayout>
-                <LinearLayout android:id="@+id/creditcardlayout"
-                              android:layout_height="wrap_content"
-                              android:layout_width="fill_parent">
 
-                    <TextView 
-                        android:text="Credit card type:"
+                 <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left" >
+
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:labelFor="@+id/billingInformationCCType"
-                        />
+                        android:text="@string/credit_card_type_" />
+
                     <Spinner
                         android:id="@+id/billingInformationCCType"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:longClickable="true" 
                         />
 				 </LinearLayout>
@@ -448,23 +449,24 @@
                               android:inputType="number" android:focusable="false"
                               android:entries="@array/credit_card_years"/>
                 </RelativeLayout>
-                <RelativeLayout android:layout_width="fill_parent"
-                              android:layout_height="wrap_content">
 
-                    <TextView android:layout_height="wrap_content"
-                              android:layout_width="wrap_content"
-                              android:layout_alignParentLeft="true"
-                              android:layout_toLeftOf="@+id/billingInformationCCSecurityCode"
-                              android:text="@string/billing_cc_security"
-                              android:labelFor="@+id/billingInformationCCSecurityCode"
-                               />
-                    
-                    <EditText android:id="@+id/billingInformationCCSecurityCode"
-                              android:layout_width="60dp"
-                              android:layout_height="wrap_content"
-                              android:layout_alignParentRight="true"
-                              android:inputType="number" />
-                </RelativeLayout>
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left" >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:labelFor="@+id/billingInformationCCSecurityCode"
+                        android:text="@string/billing_cc_security" />
+
+                    <EditText
+                        android:id="@+id/billingInformationCCSecurityCode"
+                        android:layout_width="60dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/legal_text"
