Modify/Delete last utterance in chat

--- a/android_search/res/layout/fragment_chat.xml
+++ b/android_search/res/layout/fragment_chat.xml
@@ -19,8 +19,9 @@
         android:scrollbarStyle="outsideOverlay"
         android:drawSelectorOnTop="true"
         android:stackFromBottom="false"
+        android:transcriptMode="alwaysScroll" 
         android:background="@drawable/chat_background"
-        android:transcriptMode="alwaysScroll" >
+        >
     </ListView>
 
     <!-- android:visibility="gone" -->
