--- a/android_search/res/layout/row_mychat.xml
+++ b/android_search/res/layout/row_mychat.xml
@@ -5,50 +5,72 @@
     android:orientation="horizontal"
      >
 
-      <LinearLayout 
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:background="@drawable/bubble2_blue"
-        android:orientation="horizontal"   
-        android:layout_marginLeft="2dip"
-        android:layout_marginTop="2dip" 
-        >   
-      <TextView
-            android:id="@+id/label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="2dip"
-            android:textSize="16sp"
-            android:text="Lorem ipsum bla bla asdfg dfswe"
-            android:textColor="@android:color/primary_text_light" />
-      
-<!--    
-    <TextView
-        android:id="@+id/label"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:paddingTop="2dip"
-        android:paddingLeft="3dip"
-        android:paddingRight="3dip"
-        android:paddingBottom="7dip"
-        android:textColor="@color/my_chat_in_session_text"
-        android:text="Lorem ipsum bla bla asdfg dfswe"
-        android:textSize="16sp" /> --> 
-    <!-- 
-    <EditText 
-        android:id="@+id/editText"
-        android:visibility="gone"
-        android:layout_width="fill_parent"
-        android:paddingLeft="3dip"
-        android:paddingRight="3dip"
-        android:inputType="text"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        />
-        
- -->
+      <LinearLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="2dip"
+          android:layout_marginTop="2dip"
+          android:background="@drawable/bubble2_blue"
+          android:animateLayoutChanges="true"
+          android:orientation="horizontal" >
+
+	      <TextView
+	            android:id="@+id/label"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="center"
+	            android:visibility="gone"
+	            android:layout_margin="2dip"
+	            android:textSize="16sp"
+	            android:text="Lorem ipsum bla bla asdfg dfswe"
+	            android:textColor="@android:color/primary_text_light" />
+	      
+	      <RelativeLayout
+	          android:id="@+id/edit_chat_item"
+	          android:layout_width="wrap_content"
+	          android:layout_height="wrap_content"
+	          android:gravity="start"
+	          android:orientation="horizontal" >
+
+<!-- 	              android:minHeight="56dp" -->
+
+	          <EditText
+	              android:id="@+id/editText"
+	              android:layout_width="match_parent"
+	              android:layout_height="wrap_content"
+	              android:layout_alignParentTop="true"
+	              android:layout_alignParentLeft="true"
+	              android:inputType="textMultiLine"
+	              android:layout_toLeftOf="@+id/buttonDelete"
+	              android:layout_marginLeft="-2dip"
+	              android:gravity="top"
+	              android:text="Lorem ipsum bla bla"
+	              android:textSize="16sp" 
+	              />
+	
+	        
+	          
+	           <ImageButton
+	              android:id="@+id/buttonMicrophone"
+	              android:layout_width="48dp"
+	              android:layout_height="48dp"
+	              android:layout_alignParentTop="true"
+	              android:layout_alignParentRight="true"
+	              android:background="@drawable/microphone_48" 
+	              android:contentDescription="@string/microphone_button"/>
+	             
+		           
+	          <ImageButton
+	              android:id="@+id/buttonDelete"
+	              android:layout_width="48dp"
+	              android:layout_height="48dp"
+	              android:layout_toLeftOf="@+id/buttonMicrophone"
+	              android:layout_alignParentTop="true"
+	              android:background="@drawable/remove_utterance"
+	              android:contentDescription="@string/delete_utterance_button"/>
+	          
+	      </RelativeLayout>
+
+	      
  	</LinearLayout>
 </LinearLayout>
