--- a/android_search/res/layout/fragment_bookingsummary.xml
+++ b/android_search/res/layout/fragment_bookingsummary.xml
@@ -362,7 +362,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="visible" >
+                android:visibility="gone" >
 
                 <TextView android:id="@+id/billingInformationLabel"
                           android:layout_width="fill_parent"
