Better error handling - handling errors from voice-request and text-requests at the same place.

--- a/android_search/res/layout/room_list_item_expanded.xml
+++ b/android_search/res/layout/room_list_item_expanded.xml
@@ -44,7 +44,7 @@
     	    <ImageView 
 	            android:id="@+id/roomImage"
 				android:layout_width="128dp"
-            	android:layout_height="wrap_content"
+            	android:layout_height="128dp"
             	android:gravity="center"
 	            
   	            android:layout_gravity="center"
