--- a/android_search/res/drawable/vha_background.xml
+++ b/android_search/res/drawable/vha_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">    
        <gradient                
-        android:startColor="#d84028"
-        android:endColor="#b22814"
+        android:startColor="#4028d8"
+        android:endColor="#2814b2"
         android:angle="45"
         />     
 </shape>
