--- a/android_search/res/layout/new_main.xml
+++ b/android_search/res/layout/new_main.xml
@@ -77,6 +77,12 @@
         android:visibility="gone"
          />
     
+    <ImageView 
+        android:id="@+id/trip_advisor_promo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:contentDescription="Now with TripAdvisor Ratings"/>
     
     <RelativeLayout
         android:id="@id/bottom_bar"
