--- a/android_search/res/values/styles.xml
+++ b/android_search/res/values/styles.xml
@@ -273,6 +273,7 @@
     <style name="ButtonBarButton" />
 
     <style name="StyledIndicators"   parent="@android:style/Theme.Holo.Light.DarkActionBar">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
         <item name="vpiCirclePageIndicatorStyle">@style/CustomCirclePageIndicator</item>
         <item name="vpiLinePageIndicatorStyle">@style/CustomLinePageIndicator</item>
         <item name="vpiTitlePageIndicatorStyle">@style/CustomTitlePageIndicator</item>
