--- a/android_search/res/layout/volume_settings_dialog.xml
+++ b/android_search/res/layout/volume_settings_dialog.xml
@@ -90,9 +90,12 @@
             android:layout_marginTop="15dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:text="Use this Audio device:" />
 
         <RadioGroup 
+            android:id="@+id/radioGroup_audio"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             >
