Initial tutorial - urging the user to click the microphone

--- a/android_search/res/menu/mainmenu.xml
+++ b/android_search/res/menu/mainmenu.xml
@@ -9,6 +9,12 @@
     </item>
     
     
+    
+    <item
+        android:id="@+id/tutorial"
+        android:title="@string/tutorial">
+    </item>
+    
     <item
         android:id="@+id/faq"
         android:title="@string/faq">
