--- a/android_search/res/layout/new_main.xml
+++ b/android_search/res/layout/new_main.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
+    android:background="@drawable/chat_background"
     android:layout_height="fill_parent">
 
    
@@ -35,6 +36,7 @@
         android:layout_width="fill_parent"
         android:layout_below="@id/indicator"
         android:layout_alignParentBottom="true"
+        android:background="@drawable/chat_background"
         android:layout_height="fill_parent" />
 <!--         android:layout_above="@+id/bottom_bar" -->
 
