Fixed bugs of using local Google voice recognition

--- a/android_demo/res/values/arrays.xml
+++ b/android_demo/res/values/arrays.xml
@@ -16,15 +16,16 @@
     </string-array>
     
     <string-array name="entries_vr_service">
-        <item>None</item>
-        <item>Ginger</item>
-        <item>Google Web Service</item>
+<!--         <item>None</item> -->
+<!--         <item>Ginger</item> -->
+<!--         <item>Google Web Service</item> -->
+		<item>Eva Voice Recognition</item>
         <item>Google Phone</item>
     </string-array>
     <string-array name="entryvalues_vr_service">
         <item>none</item>
-        <item>ginger</item>
-        <item>google</item>
+<!--         <item>ginger</item> -->
+<!--         <item>google</item> -->
         <item>google_local</item>
     </string-array>
    
