--- a/android_search/res/xml/preferences.xml
+++ b/android_search/res/xml/preferences.xml
@@ -27,4 +27,14 @@
 	</PreferenceCategory>
 	
 	
+	
+	<PreferenceCategory android:title="Advanced"> 
+        <ListPreference 
+            android:key="eva_vr_service"
+            android:title="Preferred Voice Recognition service"
+            android:summary=""
+            android:entries="@array/entries_vr_service"
+            android:entryValues="@array/entryvalues_vr_service"
+            />
+     </PreferenceCategory>
 </PreferenceScreen>
