--- a/android_search/res/layout/hotel_list_item.xml
+++ b/android_search/res/layout/hotel_list_item.xml
@@ -1,143 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/hotel_list_item_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/hotel_background"
-    android:orientation="horizontal" >
+     >
 
-    <ImageView
-        android:id="@+id/hotelImage"
-        android:layout_width="72dip"
-        android:layout_height="72dip"
-        android:src="@drawable/slanted_icon_72"
-        android:layout_gravity="center"
-        android:padding="2dp"
-        android:contentDescription="@string/hotel_image">
-    </ImageView>
-
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="4dip" >
-
-        <RelativeLayout 
-            android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-            >
-            
-            
-  		<TextView
-            android:id="@+id/hotelDistance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="4dp"
-            android:text="15Km"
-            android:textColor="#ff2f74a7"
-            android:textStyle="bold" />
-  		
-  		<TextView
-           android:id="@+id/hotelName"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:ellipsize="marquee"
-           android:marqueeRepeatLimit="marquee_forever"
-           android:singleLine="true"
-           android:layout_toLeftOf="@id/hotelDistance"
-           android:layout_alignParentLeft="true"
-           android:text="Hotel Name"
-           android:textColor="#FF000000"
-           android:textSize="18sp"
-           android:textStyle="bold" />
-<!--            android:freezesText="true" -->
-
-            
-        </RelativeLayout>
+    
+    <RelativeLayout
+        android:id="@+id/layoutName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        >
         
-        
-  <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-      
-      <ImageView
-                android:id="@+id/tripAdvisorStrip"
-                android:layout_width="100dip"
-                android:layout_height="20dip"
-                android:layout_marginTop="2dp"
-                android:layout_alignParentRight="true"
-                android:contentDescription="@string/trip_advisor_icon"
-                />
-<!--                 android:src="@drawable/trip_advisor_strip"  -->
-      
-        <TextView
-            android:id="@+id/hotelLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Located near city center"
-            android:ellipsize="marquee"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@id/tripAdvisorStrip"
-            android:singleLine="true"
-            android:textColor="#ff1f5477" />
-
-        </RelativeLayout>
-        
-                    
-        
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-            
-            
-            <RatingBar
+        <RatingBar
                 android:id="@+id/rating"
                 android:layout_width="wrap_content"
                 android:layout_height="22dip"
                 android:isIndicator="true"
-                android:progressDrawable="@drawable/rating_layers" 
+                android:progressDrawable="@drawable/rating_layers_tiny" 
                 android:layout_alignParentRight="true"/>
+    
+        <TextView
+	           android:id="@+id/hotelName"
+	           android:layout_width="wrap_content"
+	           android:layout_height="wrap_content"
+	           android:ellipsize="marquee"
+	           android:layout_alignParentLeft="true"
+	           android:layout_toLeftOf="@id/rating"
+	           android:marqueeRepeatLimit="marquee_forever"
+	           android:singleLine="true"
+	           android:text="Hotel Name Bla Bla Yada Yada"
+	           android:textColor="#FF000000"
+	           android:textSize="18sp"
+	           android:textStyle="bold" />
+	<!--            android:freezesText="true" -->
+    </RelativeLayout>
+    
 
-            <LinearLayout
-                android:id="@+id/linearLayout2"
-                android:layout_width="fill_parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/layoutName"
+        >
+        
+        <ImageView
+	        android:id="@+id/hotelImage"
+	        android:layout_width="72dip"
+	        android:layout_height="72dip"
+	        android:src="@drawable/slanted_icon_72"
+	        android:padding="2dp"
+	        android:contentDescription="@string/hotel_image">
+	        
+	    </ImageView>
+	    
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@id/hotelImage"
+            android:orientation="vertical"
+            android:paddingLeft="4dip" >
+
+            <TextView
+                android:id="@+id/hotelLocation"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:ellipsize="marquee"
+                android:singleLine="true"
+                android:text="Located near city center"
+                android:textColor="#ff1f5477" />
+
+           
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="2dp" >
 
                 <TextView
-                    android:id="@+id/textFromTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/from"
-                    android:textColor="#FF9f9faf"
-                    android:textSize="12sp"
+                    android:text="TripAdvisor reviews: "
+                    android:textColor="#ff7f7f9f"
+                    android:textSize="12sp" />
+                
+                <TextView
+                    android:id="@+id/tripAdvisorRating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" 
+                    />
+                
+<!--                 <ImageView -->
+<!--                     android:id="@+id/tripAdvisorStrip" -->
+<!--                     android:layout_width="100dip" -->
+<!--                     android:layout_height="20dip" -->
+<!--                     android:contentDescription="@string/trip_advisor_icon" /> -->
+                
+                <TextView
+                    android:id="@+id/tripAdvisorReviews"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dip"
+                    android:text="(3,456)"
+                    android:textColor="#ff7f7f9f"
+                    android:textSize="12sp" />
+
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/layoutBottomRow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                
+                >
+
+                <TextView
+                    android:id="@+id/perNightTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="4dip"
+                    android:text="@string/per_night"
+                    android:textColor="#ff9f9faf"
+                    android:textSize="14sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/pricePerNight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
-                    android:text="180"
+                    android:layout_toLeftOf="@id/perNightTitle"
+                    android:text="$180.20"
                     android:textColor="#ff2f74a7"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/perNightTitle"
+                    android:id="@+id/textFromTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/per_night"
-                    android:textColor="#ff9f9faf"
-                    android:textSize="12sp"
+                    android:layout_toLeftOf="@id/pricePerNight"
+                    android:layout_marginRight="3dip"
+                    android:layout_marginTop="4dip"
+                    android:text="@string/from"
+                    android:textColor="#FF9f9faf"
+                    android:textSize="14sp"
                     android:textStyle="bold" />
-            </LinearLayout>
-
-        </RelativeLayout>
+                
+                 <TextView
+                     android:id="@+id/hotelDistance"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_toLeftOf="@id/textFromTitle"
+                     android:layout_alignParentLeft="true"
+                     android:singleLine="true"
+                     android:text="15Km from you"
+                     android:textColor="#ff2f74a7"
+                     android:textSize="12sp"/>
+            </RelativeLayout>
+            
         </LinearLayout>
+    </RelativeLayout>
 
-</LinearLayout>
+
+    
+</RelativeLayout>
